--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <dropwizard.version>1.3.17</dropwizard.version>
         <maven-war-plugin.version>3.2.2</maven-war-plugin.version>
+        <jacoco-plugin-version>0.8.3</jacoco-plugin-version>
         <swagger-ui.version>3.17.0</swagger-ui.version>
         <replacer.version>1.5.3</replacer.version>
         <maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
         <swagger.version>2.0.1</swagger.version>
         <dropwizard-guice.version>1.3.5.0</dropwizard-guice.version>
+        <maven-pmd>3.12.0</maven-pmd>
     </properties>
     <dependencies>
         <dependency>
@@ -225,6 +227,79 @@
                 </replacements>
             </configuration>
         </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-pmd-plugin</artifactId>
+            <version>${maven-pmd}</version>
+        </plugin>
+
+        <plugin>
+            <groupId>org.basepom.maven</groupId>
+            <artifactId>duplicate-finder-maven-plugin</artifactId>
+            <version>1.2.1</version>
+        </plugin>
+<!--Plugin To get code coverage and line coverage method coverage etc To be configured properly-->
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco-plugin-version}</version>
+            <configuration>
+                <excludes>
+                    <exclude></exclude>
+                </excludes>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>coverage-init</id>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                    <configuration>
+                        <propertyName>jacocoArgLine</propertyName>
+                    </configuration>
+                </execution>
+                <execution>
+                    <id>coverage-check</id>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                    <configuration>
+                        <excludes>
+                            <exclude></exclude>
+                        </excludes>
+                        <rules>
+                            <!-- All classes must have 90% line and branch coverage. TODO: Update values to 90% -->
+                            <rule>
+                                <element>BUNDLE</element>
+                                <limits>
+                                    <limit>
+                                        <counter>COMPLEXITY</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimum>0.10</minimum>
+                                    </limit>
+                                    <limit>
+                                        <counter>LINE</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimum>0.10</minimum>
+                                    </limit>
+                                    <limit>
+                                        <counter>BRANCH</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimum>0.00</minimum>
+                                    </limit>
+                                    <limit>
+                                        <counter>METHOD</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimum>0.00</minimum>
+                                    </limit>
+                                </limits>
+                            </rule>
+                        </rules>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+
     </plugins>
     </build>
 </project>
