--- a/config/stage/config.yaml
+++ b/config/stage/config.yaml
@@ -88,3 +88,25 @@ swagger:
   title: Simple Java Application
   description: "Simple Java Application"
   contactEmail: "dgarg20@gmail.com"
+
+dataSource:
+  driverClass: com.mysql.jdbc.Driver
+  user: root
+  password: 'yatra@123'
+  url: jdbc:mysql://localhost:3306/demo?autoReconnect=true&useSSL=false&nullNamePatternMatchesAll=true
+  properties:
+    charSet: UTF-8
+    hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+    hibernate.hbm2ddl.auto: update
+    hibernate.show_sql: false
+    hibernate.order_inserts: true
+    hibernate.order_updates: true
+    hibernate.session.events.log: false
+    hibernate.current_session_context_class: org.hibernate.context.internal.ManagedSessionContext
+  maxWaitForConnection: 1s
+  minSize: 1
+  initialSize: 4
+  maxSize: 5
+  checkConnectionWhileIdle: true
+  validationInterval: 10s
+  minIdleTime: 1 minute
