--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
     <groupId>com.dgarg20.base_project</groupId>
     <artifactId>java_base</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <modules>
+        <module>task_scheduler</module>
+        <module>movie_booking</module>
+        <module>toll_booking_system</module>
+        <module>stocks_market</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,6 +26,10 @@
         <swagger.version>2.0.1</swagger.version>
         <dropwizard-guice.version>1.3.5.0</dropwizard-guice.version>
         <maven-pmd>3.12.0</maven-pmd>
+        <wiremode-server>2.25.1</wiremode-server>
+        <maven-surefire-plugin>2.19.1</maven-surefire-plugin>
+        <junit.version>5.1.0</junit.version>
+        <jdk.version>1.8</jdk.version>
     </properties>
     <dependencies>
         <dependency>
@@ -48,7 +58,7 @@
         </dependency>
 
 
-        <dependency>
+        <!--<dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-core</artifactId>
             <version>${swagger.version}</version>
@@ -67,7 +77,7 @@
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-jaxrs2-servlet-initializer</artifactId>
             <version>${swagger.version}</version>
-        </dependency>
+        </dependency>-->
 
 
         <dependency>
@@ -83,6 +93,34 @@
             <!--<scope>provided</scope>-->
         </dependency>
 
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-hibernate</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
+
+        <!-- Used for cache can be removed if cache not required-->
+       <!-- <dependency>
+            <groupId>com.googlecode.cqengine</groupId>
+            <artifactId>cqengine</artifactId>
+            <version>3.5.0</version>
+        </dependency>-->
+
+
+<!---->
+       <!-- <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8</artifactId>
+            <version>${wiremode-server}</version>
+            <scope>test</scope>
+        </dependency>-->
+
 
         <!--<dependency>
             <groupId>com.hubspot.dropwizard</groupId>
@@ -95,44 +133,54 @@
 
     <build>
         <finalName>Java-Base-${version}</finalName>
-    <!--<plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>1.6</version>
-            <configuration>
-                <createDependencyReducedPom>true</createDependencyReducedPom>
-                <filters>
-                    <filter>
-                        <artifact>*:*</artifact>
-                        <excludes>
-                            <exclude>META-INF/*.SF</exclude>
-                            <exclude>META-INF/*.DSA</exclude>
-                            <exclude>META-INF/*.RSA</exclude>
-                        </excludes>
-                    </filter>
-                </filters>
-            </configuration>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>shade</goal>
-                    </goals>
-                    <configuration>
-                        <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>com.com.dgarg20.java_base.MainApp</mainClass>
-                            </transformer>
-                        </transformers>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>-->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+        <!--<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.6</version>
+                <configuration>
+                    <createDependencyReducedPom>true</createDependencyReducedPom>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.com.dgarg20.java_base.MainApp</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>-->
 
-    <plugins>
+    <!--<plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -165,7 +213,7 @@
             </executions>
         </plugin>
         <plugin>
-            <!-- Download Swagger UI webjar. -->
+            &lt;!&ndash; Download Swagger UI webjar. &ndash;&gt;
             <artifactId>maven-dependency-plugin</artifactId>
             <version>${maven-dependency-plugin.version}</version>
             <executions>
@@ -188,7 +236,7 @@
             </executions>
         </plugin>
         <plugin>
-            <!-- Add Swagger UI resources to the war file. -->
+            &lt;!&ndash; Add Swagger UI resources to the war file. &ndash;&gt;
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-war-plugin</artifactId>
             <version>${maven-war-plugin.version}</version>
@@ -204,8 +252,9 @@
                 </webResources>
             </configuration>
         </plugin>
+
+        &lt;!&ndash; Replace the OpenAPI specification example URL with the local one. &ndash;&gt;
         <plugin>
-            <!-- Replace the OpenAPI specification example URL with the local one. -->
             <groupId>com.google.code.maven-replacer-plugin</groupId>
             <artifactId>replacer</artifactId>
             <version>${replacer.version}</version>
@@ -227,18 +276,31 @@
                 </replacements>
             </configuration>
         </plugin>
+
+        &lt;!&ndash;PMD is a source code analyzer. It finds unused variables, empty catch blocks, unnecessary object creation, and so forth.&ndash;&gt;
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pmd-plugin</artifactId>
             <version>${maven-pmd}</version>
         </plugin>
 
+
         <plugin>
             <groupId>org.basepom.maven</groupId>
             <artifactId>duplicate-finder-maven-plugin</artifactId>
             <version>1.2.1</version>
         </plugin>
-<!--Plugin To get code coverage and line coverage method coverage etc To be configured properly-->
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven-surefire-plugin}</version>
+            <configuration>
+                <argLine>@{jacocoArgLine} -Xmx512m</argLine>
+            </configuration>
+        </plugin>
+
+&lt;!&ndash;Plugin To get code coverage and line coverage method coverage etc To be configured properly&ndash;&gt;
         <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
@@ -268,7 +330,7 @@
                             <exclude></exclude>
                         </excludes>
                         <rules>
-                            <!-- All classes must have 90% line and branch coverage. TODO: Update values to 90% -->
+                            &lt;!&ndash; All classes must have 90% line and branch coverage. TODO: Update values to 90% &ndash;&gt;
                             <rule>
                                 <element>BUNDLE</element>
                                 <limits>
@@ -299,8 +361,40 @@
                 </execution>
             </executions>
         </plugin>
-
-    </plugins>
+    </plugins>-->
     </build>
+    <!--<reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-plugin-version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude></exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${maven-pmd}</version>
+                <configuration>
+                    <linkXRef>true</linkXRef>
+                    <sourceEncoding>utf-8</sourceEncoding>
+                    <minimumTokens>100</minimumTokens>
+                    <targetJdk>${jdk.version}</targetJdk>
+                    <excludes>
+                        <exclude>**/*Test.java</exclude>
+                        <exclude>**/generated/*.java</exclude>
+                    </excludes>
+                    <excludeRoots>
+                        <excludeRoot>target/generated-sources</excludeRoot>
+                    </excludeRoots>
+                    <skipEmptyReport>false</skipEmptyReport>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>-->
 </project>
 
